5gsec/oai-ran/netpol-oran-du.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-oran-du
  namespace: oran-ran-du
  podSelector:
    matchLabels: 
      app.kubernetes.io/name: oai-gnb-du # Applies to pods with label 'app=pod1'
  policyTypes:
  - Ingress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: oai-gnb-cu-up # Allows traffic to pods with label 'app=pod2'
    ports:
    - protocol: TCP
      port: 80
    - protocol: UDP
      port: 8085  # n4
